examples/test/testpolicy10768.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10768
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key44: value18
      key18: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value31
          key34: value49
      podSelector:
        matchLabels:
          key25: value29
          key20: value26
          key3: value36
